<resources>
    <string name="app_name">Hillfort Explorer</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="enter_hillfort_title">Please enter a Hillfort Title</string>
    <string name="save_hillfort">Save Hillfort</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_hillfort_image">Select Image</string>
    <string name="change_hillfort_image">Change</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_deleteImage">Delete Image</string>
    <string name="dialog_delete_hillfort">Delete Hillfort?</string>
    <string name="dialog_yes_delete_hillfort">YES</string>
    <string name="dialog_no_delete_hillfort">NO</string>
    <string name="title_activity_hillfort_maps">HillfortMapsActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_favourite_hillforts">Favourites</string>
    <string name="title_activity_edit_hillfort">Edit hillfort</string>
    <string name="title_activity_add_hillfort">Add hillfort</string>
</resources>
